# nix-cache-mirror

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  update.rs  util.rs
src/database/: init.sql  mod.rs  model.rs
src/server/: mod.rs  nar_info_cache.rs
src/update/: fetch_meta_rec.rs  mod.rs  semaphore.rs
