[package]
name = "nix-cache-mirror"
version = "0.0.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
failure = "0.1.6"
futures = { version = "0.3.1", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
hyper = "0.12.35"
rusqlite = { version = "0.20.0", features = ["chrono"] }
log = "0.4.8"
env_logger = "0.7.1"
async-std = "1.2.0"
lazy_static = "1.4.0"
